<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreateAnswerSheet"
        android:text="@string/createAnswerSheet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnChoosePhoto"
        android:text="@string/choosePhoto"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnCreateAnswerSheet"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSystemCamera"
        android:text="@string/systemCamera"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnChoosePhoto"/>
</RelativeLayout>
