<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_gravity="center">
        <!--************考试名1 + EdiText***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/testName"
                android:id="@+id/tvTestName1"
                android:textSize="12sp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/etTestName1"/>
        </LinearLayout>
        <!--************学号1 + EdiText***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/studentNumber"
                android:id="@+id/tvStudentNumber1"
                android:textSize="12sp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/etStudentNumber1"/>
        </LinearLayout>
        <!--************考试名2 + EdiText***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/testName"
                android:id="@+id/tvTestName2"
                android:visibility="gone"
                android:textSize="12sp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/etTestName2"
                android:visibility="gone"/>
        </LinearLayout>

        <!--************学号2 + EdiText***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/studentNumber"
                android:id="@+id/tvStudentNumber2"
                android:visibility="gone"
                android:textSize="12sp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/etStudentNumber2"
                android:visibility="gone"/>
        </LinearLayout>

        <!--************CheckBox1 + 保存答案照片***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSaveCorrPic1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSaveCorrPic1"
                android:textSize="12sp"/>
        </LinearLayout>
        <!--************CheckBox1 + 保存错题照片***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSaveErrPic1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSaveErrPic1"
                android:textSize="12sp"/>
        </LinearLayout>
        <!--************CheckBox2 + 保存答案照片***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSaveCorrPic2"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSaveCorrPic2"
                android:visibility="gone"
                android:textSize="12sp"/>
        </LinearLayout>
        <!--************CheckBox2 + 保存错题照片***************-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSaveErrPic2"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSaveErrPic2"
                android:visibility="gone"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>